# markov_fut

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  run.py
data/outputs/models/: P_blocks.npz  P_full.npz  state_index.json
data/outputs/tables/: edges.csv  metrics.csv
output/: states.csv  transition_counts.csv  transition_matrix.csv
saida_config/: states.csv  transition_counts.csv  transition_matrix.csv
saida_leic_city/: debug_run_info.txt  states.csv  transition_counts.csv  transition_matrix.csv
saida_man_city/: debug_run_info.txt  states.csv  transition_counts.csv  transition_matrix.csv
src/: markov_futebol.py  plotting.py
src/markov_fut/: cli.py  config_io.py  loader.py  markov.py  segmentation.py  state_definitions.py  visualize.py
src/markov_fut.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/markov_futebol/: cli.py  markov.py  state_definitions.py  visualize.py
src/markov_soccer/: cli.py  loader.py  markov.py  state_definitions.py
tests/: _util.py  conftest.py  test_basics.py  test_e2e.py  test_pipeline.py  test_segmentation_full.py  test_segmentation_min.py  test_state_mapping.py  test_state_mapping.py:Zone.Identifier
