[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markov-futebol"
version = "0.1.0"
description = "Modelagem de transições táticas em futebol com Cadeias de Markov (StatsBomb Open Data)."
authors = [{ name = "Você" }]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.24",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
markov-futebol = "markov_futebol.cli:app"
